compiler/tests/should-fail/HostClash.via
/* NameClashError */

host alice
host alice

fun main() {
    val x: int = 0;
}
